// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`fallback ambient constant bound 1`] = `
"do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < limit) then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback arithmetic overflow 1`] = `
"do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < 9007199254740991 + 1) then
			break
		end
		print(i)
		break
	end
end
return nil
"
`;

exports[`fallback changing array-size bound 1`] = `
"local values = { 1, 2, 3, 4 }
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < #values) then
			break
		end
		values[#values] = nil
	end
end
return nil
"
`;

exports[`fallback computed constant bound 1`] = `
"local function getLimit()
	return 3
end
local limit = getLimit()
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < limit) then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback computed unknown constant 1`] = `
"local function getLimit()
	return 3
end
local limit = getLimit()
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < limit) then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback destructured literal type 1`] = `
"local function bounds()
	return {
		limit = 3,
	}
end
local limit = bounds().limit
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < limit) then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback destructuring write to induction variable 1`] = `
"do
	local _i = 0
	local _shouldIncrement = false
	while true do
		local i = _i
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < 3) then
			break
		end
		i = 5
		_i = i
	end
end
return nil
"
`;

exports[`fallback different condition variable 1`] = `
"local condition = 2
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (condition < 3) then
			break
		end
		condition += 1
		print(i)
	end
end
return nil
"
`;

exports[`fallback different decrement target 1`] = `
"local remaining = 3
do
	local i = 3
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			remaining -= 1
		else
			_shouldIncrement = true
		end
		if not (i > 0) then
			break
		end
		if remaining == 1 then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback effectful arithmetic bound 1`] = `
"local function getLimit()
	print("check")
	return 3
end
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < getLimit() + 1) then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback effectful bound with a literal return type 1`] = `
"local function limit()
	print("limit")
	return 2
end
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < limit()) then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback effectful step 1`] = `
"local function step()
	print("step")
	return 1
end
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += step()
		else
			_shouldIncrement = true
		end
		if not (i < 3) then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback fractional constant bound 1`] = `
"local limit = 2.5
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < limit) then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback fractional initializer 1`] = `
"do
	local i = 0.5
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < 3) then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback literal-typed bound mutated through an alias 1`] = `
"local source = {
	value = 3,
}
local alias = source
alias.value = 2.5
local function getLimit()
	return source.value
end
local limit = getLimit()
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < limit) then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback literal-typed destructured bound mutated through an alias 1`] = `
"local source = {
	limit = 3,
}
local alias = source
alias.limit = 2.5
local limit = source.limit
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < limit) then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback literal-typed initializer mutated through an alias 1`] = `
"local source = {
	start = 0,
}
local alias = source
alias.start = 0.5
local start = source.start
do
	local i = start
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < 3) then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback literal-typed step mutated through an alias 1`] = `
"local source = {
	step = 1,
}
local alias = source
alias.step = -1
local step = source.step
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += step
		else
			_shouldIncrement = true
		end
		if not (i < 3) then
			break
		end
		print(i)
		break
	end
end
return nil
"
`;

exports[`fallback multiplicative assignment increment 1`] = `
"do
	local i = 1
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i = i * 2
		else
			_shouldIncrement = true
		end
		if not (i < 8) then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback multiplicative step 1`] = `
"do
	local i = 1
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i *= 2
		else
			_shouldIncrement = true
		end
		if not (i < 4) then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback mutable constant alias 1`] = `
"local initial = 3
local limit = initial
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < limit) then
			break
		end
		limit -= 1
	end
end
return nil
"
`;

exports[`fallback mutable identifier bound 1`] = `
"local limit = 3
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < limit) then
			break
		end
		limit -= 1
	end
end
return nil
"
`;

exports[`fallback namespace constant bound 1`] = `
"local Resources = {}
do
	local _container = Resources
	local LIMIT = 3
	_container.LIMIT = LIMIT
end
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < Resources.LIMIT) then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback nonlinear assignment increment 1`] = `
"do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i = 1 - i
		else
			_shouldIncrement = true
		end
		if not (i < 3) then
			break
		end
		print(i)
		break
	end
end
return nil
"
`;

exports[`fallback nonmutating binary incrementor 1`] = `
"do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			local _ = i + 1
		else
			_shouldIncrement = true
		end
		if not (i < 3) then
			break
		end
		print(i)
		break
	end
end
return nil
"
`;

exports[`fallback nonmutating unary incrementor 1`] = `
"do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			local _ = -i
		else
			_shouldIncrement = true
		end
		if not (i < 3) then
			break
		end
		print(i)
		break
	end
end
return nil
"
`;

exports[`fallback parameter bound 1`] = `
"local function run(limit)
	if limit == nil then
		limit = 3
	end
	do
		local i = 0
		local _shouldIncrement = false
		while true do
			if _shouldIncrement then
				i += 1
			else
				_shouldIncrement = true
			end
			if not (i < limit) then
				break
			end
			limit -= 1
		end
	end
end
run()
return nil
"
`;

exports[`fallback replacing assignment increment 1`] = `
"do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i = 1
		else
			_shouldIncrement = true
		end
		if not (i < 2) then
			break
		end
		print(i)
		break
	end
end
return nil
"
`;

exports[`fallback shared unknown constant expression 1`] = `
"local function getInitial()
	return 1
end
local initial = getInitial()
local limit = initial + initial
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < limit) then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback step before initialization 1`] = `
"local step
local function run()
	do
		local i = 0
		local _shouldIncrement = false
		while true do
			if _shouldIncrement then
				i += step
			else
				_shouldIncrement = true
			end
			if not (i < 1) then
				break
			end
			print(i)
			break
		end
	end
end
run()
step = 1
return nil
"
`;

exports[`fallback tuple iterator assignment target 1`] = `
"local pair
local _iterator = iterator
while true do
	local _v = { _iterator() }
	if _v[1] == nil then
		break
	end
	pair = _v
	print(pair[2])
end
return nil
"
`;

exports[`fallback unsafe integer bound 1`] = `
"do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < 9007199254740992) then
			break
		end
		print(i)
		break
	end
end
return nil
"
`;

exports[`fallback wrong step direction 1`] = `
"do
	local i = 3
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i -= 1
		else
			_shouldIncrement = true
		end
		if not (i < 0) then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback zero constant step 1`] = `
"local step = 0
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += step
		else
			_shouldIncrement = true
		end
		if not (i < 3) then
			break
		end
		print(i)
		break
	end
end
return nil
"
`;

exports[`fallback zero step 1`] = `
"do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 0
		else
			_shouldIncrement = true
		end
		if not (i < 1) then
			break
		end
		print(i)
		break
	end
end
return nil
"
`;

exports[`optimized arithmetic bound 1`] = `
{
  "optimized": "for i = 0, 1 + 1 do
	print(i)
end
return nil
",
  "unoptimized": "do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < 1 + 2) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized arithmetic step 1`] = `
{
  "optimized": "for i = 0, 4, 1 + 1 do
	print(i)
end
return nil
",
  "unoptimized": "do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1 + 1
		else
			_shouldIncrement = true
		end
		if not (i < 5) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized ascending exclusive bound 1`] = `
{
  "optimized": "for i = 0, 2 do
	print(i)
end
return nil
",
  "unoptimized": "do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < 3) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized ascending inclusive bound with a step 1`] = `
{
  "optimized": "for i = 0, 4, 2 do
	print(i)
end
return nil
",
  "unoptimized": "do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 2
		else
			_shouldIncrement = true
		end
		if not (i <= 4) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized assignment increment 1`] = `
{
  "optimized": "for i = 0, 2 do
	print(i)
end
return nil
",
  "unoptimized": "do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i = i + 1
		else
			_shouldIncrement = true
		end
		if not (i < 3) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized commuted assignment increment 1`] = `
{
  "optimized": "for i = 0, 2 do
	print(i)
end
return nil
",
  "unoptimized": "do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i = 1 + i
		else
			_shouldIncrement = true
		end
		if not (i < 3) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized constant alias 1`] = `
{
  "optimized": "local baseLimit = 3
local limit = baseLimit
for i = 0, limit - 1 do
	print(i)
end
return nil
",
  "unoptimized": "local baseLimit = 3
local limit = baseLimit
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < limit) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized constant arithmetic 1`] = `
{
  "optimized": "local baseLimit = 2
local limit = baseLimit * 3 - 1
for i = 0, limit - 1 do
	print(i)
end
return nil
",
  "unoptimized": "local baseLimit = 2
local limit = baseLimit * 3 - 1
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < limit) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized constant assertion 1`] = `
{
  "optimized": "local limit = 3
for i = 0, limit - 1 do
	print(i)
end
return nil
",
  "unoptimized": "local limit = 3
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < limit) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized constant identifier bound 1`] = `
{
  "optimized": "local MAX_SLOTS = 10
for slot = 0, MAX_SLOTS - 1 do
	print(slot)
end
return nil
",
  "unoptimized": "local MAX_SLOTS = 10
do
	local slot = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			slot += 1
		else
			_shouldIncrement = true
		end
		if not (slot < MAX_SLOTS) then
			break
		end
		print(slot)
	end
end
return nil
",
}
`;

exports[`optimized constant inclusive bounds 1`] = `
{
  "optimized": "local start = 1
local limit = 3
for i = start, limit do
	print(i)
end
return nil
",
  "unoptimized": "local start = 1
local limit = 3
do
	local i = start
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i <= limit) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized constant satisfies 1`] = `
{
  "optimized": "local limit = 3
for i = 0, limit - 1 do
	print(i)
end
return nil
",
  "unoptimized": "local limit = 3
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < limit) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized constant step 1`] = `
{
  "optimized": "local step = 2
for i = 0, 4, step do
	print(i)
end
return nil
",
  "unoptimized": "local step = 2
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += step
		else
			_shouldIncrement = true
		end
		if not (i < 5) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized descending assignment increment 1`] = `
{
  "optimized": "local step = 2
for i = 5, 1, -step do
	print(i)
end
return nil
",
  "unoptimized": "local step = 2
do
	local i = 5
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i = i - step
		else
			_shouldIncrement = true
		end
		if not (i > 0) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized descending constant bounds 1`] = `
{
  "optimized": "local start = 3
local limit = -2
for i = start, limit + 1, -2 do
	print(i)
end
return nil
",
  "unoptimized": "local start = 3
local limit = -2
do
	local i = start
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i -= 2
		else
			_shouldIncrement = true
		end
		if not (i > limit) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized descending exclusive bound 1`] = `
{
  "optimized": "for i = 3, 1, -1 do
	print(i)
end
return nil
",
  "unoptimized": "do
	local i = 3
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i -= 1
		else
			_shouldIncrement = true
		end
		if not (i > 0) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized descending inclusive bound with a step 1`] = `
{
  "optimized": "for i = 4, 0, -2 do
	print(i)
end
return nil
",
  "unoptimized": "do
	local i = 4
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i -= 2
		else
			_shouldIncrement = true
		end
		if not (i >= 0) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized destructured constant bound 1`] = `
{
  "optimized": "local limit = 3
for i = 0, limit - 1 do
	print(i)
end
return nil
",
  "unoptimized": "local limit = 3
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < limit) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized literal spelling 1`] = `
{
  "optimized": "for i = 0x10, 19 do
	print(i)
end
return nil
",
  "unoptimized": "do
	local i = 0x10
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < 2_0) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized negated identifier bound 1`] = `
{
  "optimized": "local limit = 3
for i = 0, -limit + 1, -1 do
	print(i)
end
return nil
",
  "unoptimized": "local limit = 3
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i -= 1
		else
			_shouldIncrement = true
		end
		if not (i > -limit) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized negative bounds 1`] = `
{
  "optimized": "for i = -1, -3, -1 do
	print(i)
end
return nil
",
  "unoptimized": "do
	local i = -1
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i -= 1
		else
			_shouldIncrement = true
		end
		if not (i >= -3) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized negative constant step 1`] = `
{
  "optimized": "local step = -1
for i = 3, 1, step do
	print(i)
end
return nil
",
  "unoptimized": "local step = -1
do
	local i = 3
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += step
		else
			_shouldIncrement = true
		end
		if not (i > 0) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized negative zero initializer 1`] = `
{
  "optimized": "for i = -0, 0 do
	print(1 / i)
end
return nil
",
  "unoptimized": "do
	local i = -0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i <= 0) then
			break
		end
		print(1 / i)
	end
end
return nil
",
}
`;

exports[`optimized parenthesized bound 1`] = `
{
  "optimized": "for i = 0, 2 do
	print(i)
end
return nil
",
  "unoptimized": "do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < 3) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized parenthesized condition 1`] = `
{
  "optimized": "for i = 0, 2 do
	print(i)
end
return nil
",
  "unoptimized": "do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < 3) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized parenthesized condition variable 1`] = `
{
  "optimized": "for i = 0, 2 do
	print(i)
end
return nil
",
  "unoptimized": "do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < 3) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized parenthesized increment target 1`] = `
{
  "optimized": "for i = 0, 2 do
	print(i)
end
return nil
",
  "unoptimized": "do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < 3) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized parenthesized start 1`] = `
{
  "optimized": "for i = 0, 2 do
	print(i)
end
return nil
",
  "unoptimized": "do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < 3) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized parenthesized step 1`] = `
{
  "optimized": "for i = 0, 2 do
	print(i)
end
return nil
",
  "unoptimized": "do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < 3) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized reversed ascending comparison 1`] = `
{
  "optimized": "for i = 0, 2 do
	print(i)
end
return nil
",
  "unoptimized": "do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (3 > i) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized reversed ascending inclusive comparison 1`] = `
{
  "optimized": "for i = 0, 3 do
	print(i)
end
return nil
",
  "unoptimized": "do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (3 >= i) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized reversed descending comparison 1`] = `
{
  "optimized": "for i = 3, 1, -1 do
	print(i)
end
return nil
",
  "unoptimized": "do
	local i = 3
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i -= 1
		else
			_shouldIncrement = true
		end
		if not (0 < i) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized reversed descending inclusive comparison 1`] = `
{
  "optimized": "for i = 3, 0, -1 do
	print(i)
end
return nil
",
  "unoptimized": "do
	local i = 3
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i -= 1
		else
			_shouldIncrement = true
		end
		if not (0 <= i) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized shared constant expression 1`] = `
{
  "optimized": "local initial = 1
local limit = initial + initial
for i = 0, limit - 1 do
	print(i)
end
return nil
",
  "unoptimized": "local initial = 1
local limit = initial + initial
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < limit) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;
